--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,12 +6,10 @@ on:
         description: "Version Number"
         required: true
 jobs:
-  release:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-        with:
-          token: ${{ secrets.GH_PAT }}
       - name: Install NodeJS dependencies
         run: npm ci
       - name: NodeJS Tests
@@ -20,22 +18,36 @@ jobs:
           AIRBRAKE_PROJECT_ID: ${{secrets.AIRBRAKE_PROJECT_ID}}
           AIRBRAKE_PROJECT_KEY: ${{secrets.AIRBRAKE_PROJECT_KEY}}
           AIRBRAKE_ENVIRONMENT: ${{secrets.AIRBRAKE_ENVIRONMENT}}
-      - name: Configuring GIT
-        run: git config --local user.email "action@github.com" && git config --local user.name "GitHub Action"
-      - name: Add GIT origin
-        run: git remote add gh-origin https://${GITHUB_ACTOR}:${{ secrets.GH_PAT }}@github.com/roman-numeral.git​
-      - name: Updating node package version
-        run: npm version ${{ github.event.inputs.version }}
-      - name: Tagging release in GIT
-        run: git tag -a ${{ github.event.inputs.version }} -m "Releasing ${{ github.event.inputs.version }}"
-      - name: Push tag and main
-        run: git push gh-origin HEAD:main --tags
+  version:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v2
+        name: Checking out code
+        env:
+          token: ${{ secrets.GH_PAT }}
+      - name: Tagging release ${VERSION}
+        run: |
+          npm version ${VERSION}
+          git config user.name "Github Actions"
+          git config user.email github-actions@github.com
+          git push origin HEAD:main --tags
+        env:
+          VERSION: ${{ github.event.inputs.version }}
+          token: ${{ secrets.GH_PAT }}
+  docker-release:
+    runs-on: ubuntu-latest
+    needs: version
+    steps:
+      - uses: actions/checkout@v1
       - name: Docker build
         run: npm run build:docker
         env:
           VERSION: ${{ github.event.inputs.version }}
       - name: Login to Github Container Registry
-        run: echo ${{ secrets.GH_PAT }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
+        run: echo ${GITHUB_TOKEN} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       - name: Push release to Github Container Registry
         run: npm run release:docker
         env:
