--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,9 +28,9 @@ jobs:
           token: ${{ secrets.GH_PAT }}
       - name: Tagging release ${VERSION}
         run: |
+          git config user.name "Github Actions"
+          git config user.email github-actions@github.com
           npm version ${VERSION}
-          git config --global user.name "Github Actions"
-          git config --global user.email github-actions@github.com
           git push origin HEAD:main --tags
         env:
           VERSION: ${{ github.event.inputs.version }}
