--- a/package.json
+++ b/package.json
@@ -4,28 +4,29 @@
     "description": "A web service for converting arabic numerals to roman numerals",
     "main": "src/server.js",
     "scripts": {
-        "test": "nyc mocha",
         "init:env": "export $(cat .env | xargs)",
+        "test": "nyc mocha",
         "test:helm": "helm lint helm/",
         "release:docker": "docker push ghcr.io/klcodanr/roman-numeral:${VERSION:-latest}",
         "build:docker": "docker build -t ghcr.io/klcodanr/roman-numeral:${VERSION:-latest} .",
         "run:node": "node src/server.js",
+        "run:docker": "docker run --publish 8080:8080 --env AIRBRAKE_PROJECT_ID=${AIRBRAKE_PROJECT_ID} --env AIRBRAKE_PROJECT_KEY=${AIRBRAKE_PROJECT_KEY} --env AIRBRAKE_ENVIRONMENT=${AIRBRAKE_ENVIRONMENT} ghcr.io/klcodanr/roman-numeral",
         "deploy:helm": "helm ${HELM_ACTION:-upgrade} ${HELM_NAME} --version=${VERSION} --set-string AIRBRAKE_PROJECT_ID=${AIRBRAKE_PROJECT_ID} --set-string AIRBRAKE_PROJECT_KEY=${AIRBRAKE_PROJECT_KEY} --set-string AIRBRAKE_ENVIRONMENT=${AIRBRAKE_ENVIRONMENT} . --set-string image.tag=${VERSION}"
     },
     "author": "Dan Klco",
     "license": "ISC",
     "dependencies": {
         "@airbrake/node": "^1.4.2",
-        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "helmet": "^4.3.1",
-        "nyc": "^15.1.0",
         "winston": "^3.3.3"
     },
     "devDependencies": {
         "chai": "^4.2.0",
         "chai-http": "^4.3.0",
+        "dotenv": "^8.2.0",
         "get-port": "^5.1.1",
-        "mocha": "^8.2.1"
+        "mocha": "^8.2.1",
+        "nyc": "^15.1.0"
     }
 }
