--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: "Release"
+name: "Deploy"
 on:
   workflow_dispatch:
     inputs:
@@ -9,10 +9,8 @@ on:
         description: "Environment"
         required: true
 jobs:
-jobs:
-  helm-install:
+  helm-upgrade:
     runs-on: ubuntu-latest
-    needs: docker-release
     steps:
       - uses: actions/checkout@v1
         with:
