--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/airbrake-deploy-github-action@v1
         with:
           project-id: ${{ secrets.AIRBRAKE_PROJECT_ID }}
-          project-key: ${{ secret.AIRBRAKE_PROJECT_KEY }}
+          project-key: ${{ secrets.AIRBRAKE_PROJECT_KEY }}
           environment: ${{ github.event.inputs.environment }}
           repository: https://github.com${{ github.repo }}
           revision: ${{ github.sha }}
